final update, enjoy your day

--- a/index.html
+++ b/index.html
@@ -1454,9 +1454,9 @@ data-pagination-type="fraction"
         </div>
         <div  id="progress"></div>
         <div class="btn-group">
-          <a href="#" class="btn btn-next">
+          <span class="btn btn-next">
             <i class="fas fa-arrow-right"></i>
-          </a>
+          </span>
         </div>
       </div>
       <div class="form-step">
@@ -1465,12 +1465,12 @@ data-pagination-type="fraction"
         </div>
         <div  id="progress"></div>
         <div class="btn-group">
-          <a href="#" class="btn btn-next">
+          <span class="btn btn-next">
             <i class="fas fa-arrow-right"></i>
-          </a>
-          <a href="#" class="btn btn-prev">
+          </span>
+          <span class="btn btn-prev">
             <i class="fas fa-arrow-left"></i>
-          </a>
+          </span>
         </div>
       </div>
       <div class="form-step">
@@ -1484,15 +1484,16 @@ data-pagination-type="fraction"
         </div>
         <div  id="progress"></div>
         <div class="btn-group">
-          <a href="#" class="btn btn-prev">
+          <span class="btn btn-prev">
             <i class="fas fa-arrow-left"></i>
-          </a>
+          </span>
           <button type="submit" class="btn btn-submit">
             <i class="fas fa-arrow-right"></i>
           </button>
         </div>
       </div>
-      
+      <div id="message"></div>
+
      </form>
  </section>
 
