final update, enjoy your day

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -379,53 +379,55 @@ ALOOMIC -- A CREATIVE AGENCY
       <span class="hero-sub-text">fill this form</span>
     </div>
   </h3>
-  <form  class="form">
-    <div class="form-step form-step_active">
-      <div class="input-group">
-        <input type="text" id="input-field" placeholder="YOUR NAME" />
+    <!-- form -->
+    <form  class="form">
+      <div class="form-step form-step_active">
+        <div class="input-group">
+          <input type="text" id="input-field" placeholder="YOUR NAME" />
+        </div>
+        <div  id="progress"></div>
+        <div class="btn-group">
+          <span class="btn btn-next">
+            <i class="fas fa-arrow-right"></i>
+          </span>
+        </div>
       </div>
-      <div  id="progress"></div>
-      <div class="btn-group">
-        <a href="#" class="btn btn-next">
-          <i class="fas fa-arrow-right"></i>
-        </a>
+      <div class="form-step">
+        <div class="input-group">
+          <input type="email" id="input-field" placeholder="YOUR EMAIL" />
+        </div>
+        <div  id="progress"></div>
+        <div class="btn-group">
+          <span class="btn btn-next">
+            <i class="fas fa-arrow-right"></i>
+          </span>
+          <span class="btn btn-prev">
+            <i class="fas fa-arrow-left"></i>
+          </span>
+        </div>
       </div>
-    </div>
-    <div class="form-step">
-      <div class="input-group">
-        <input type="email" id="input-field" placeholder="YOUR EMAIL" />
+      <div class="form-step">
+        <div class="input-group">
+          <input
+            type="text"
+            class="input-text"
+            id="input-field"
+            placeholder="EXPLAIN YOUR PROJECT"
+          />
+        </div>
+        <div  id="progress"></div>
+        <div class="btn-group">
+          <span class="btn btn-prev">
+            <i class="fas fa-arrow-left"></i>
+          </span>
+          <button type="submit" class="btn btn-submit">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
       </div>
-      <div  id="progress"></div>
-      <div class="btn-group">
-        <a href="#" class="btn btn-next">
-          <i class="fas fa-arrow-right"></i>
-        </a>
-        <a href="#" class="btn btn-prev">
-          <i class="fas fa-arrow-left"></i>
-        </a>
-      </div>
-    </div>
-    <div class="form-step">
-      <div class="input-group">
-        <input
-          type="text"
-          class="input-text"
-          id="input-field"
-          placeholder="EXPLAIN YOUR PROJECT"
-        />
-      </div>
-      <div  id="progress"></div>
-      <div class="btn-group">
-        <a href="#" class="btn btn-prev">
-          <i class="fas fa-arrow-left"></i>
-        </a>
-        <button type="submit" class="btn btn-submit">
-          <i class="fas fa-arrow-right"></i>
-        </button>
-      </div>
-    </div>
-    
-   </form>
+      <div id="message"></div>
+
+     </form>
 </section> 
             
 
