Final Update, enjoy your day

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -375,8 +375,8 @@ ALOOMIC -- A CREATIVE AGENCY
  <section class="tt-section text-center tt-heading-center text-uppercase">
   <h3>
     <div class="hero-text-center">
-      Let speak <br>
-      <span class="hero-sub-text">fill this form</span>
+      BECOME <br>
+      <span class="hero-sub-text">OUR CLIENTS</span>
     </div>
   </h3>
     <!-- form -->
